[REFACTOR] Created tests for History and Rating models as well as tests for HistoryRepository and RatingRepository. Maybe implement Asynchronous Programming in the Manage Balance module by utilizing CompletableFuture in the getAllBalance() method and maybe 50% overall progress in the Manage Balance module.